# fullstack-todo-app

./: README.md
backend/: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 152daddaf5a3_create_tables.py  1753a522967e_upgarde_user.py  189e85c8c359_create_table_full.py  1e9f0fe4f1b3_create_table.py  383f40fd4a99_change_status_in_task_model.py  4a52812895fb_adduser_and_account.py  69688aabee86_update_team_member.py  7a24493f6430_update_relationship_task_table.py  861da0538231_create_table.py  870550859ac8_update_database.py  8a016501c2fd_migration_message.py  9a9f75d33327_update_relationship_task_table.py  b378978dced9_alembic_messeage.py  be27d66571d5_create_table.py  bff731de19cc_create_table_base.py  e162ce9e6b70_fix_user_table.py  f03b05a54354_change_status_in_task_model.py  f6fa27bb6677_fix_account_table.py  fa8bfd0f6cb0_update_task_table.py  fcc85ef517ce_upgarde_task_duedate.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  task.py  tasks.py  team.py  teams.py  user.py  users.py
backend/app/apis/: __init__.py
backend/app/core/: config.py  database.py
backend/app/middlewares/: auth_middleware.py
backend/app/models/: __init__.py  account.py  base.py  task.py  tasks.py  team.py  team_member.py  team_user.py  teams.py  user.py  user_team.py
backend/app/schemas/: auth.py  task.py  tasks.py  team.py  teams.py  token.py  user.py
backend/app/services/: auth.py  task.py  tasks.py  (+3 more)
backend/auth/: auth.py  schemas.py
backend/models/: base.py  tasks.py  user.py
(+85 files in other folders)
